docs(openspec): measure the agent's X11 window id on Linux
java-provider-linux left decision 1(a) waiting on a measurement, and the
agent turns out to be far enough along to answer it today: the in-process
read works on Temurin 8, 21 and 26 with no launch flags at all, so the
`--add-opens` matrix that task budgeted for does not exist.

The windowing half stays open — all three ran under WSLg, which cannot
identify its own X server from inside the distro and synthesises no input,
so it can host this measurement but not the acceptance lane.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>